--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,20 +1,15 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
-name: Python application
+name: Build and Push Docker Image
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
+    branches:
+      - main
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -43,7 +38,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKERHUB_TOKEN }}/flask-docker:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/flask-docker:latest
 
       - name: Post Cache Docker layers
         uses: actions/cache@v2
