--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,6 +32,10 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile  # adjust the path if necessary
+          push: true
 
       - name: Post Cache Docker layers
         uses: actions/cache@v2
