--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,8 +37,7 @@ jobs:
           file: ./Dockerfile  # adjust the path if necessary
           push: true
           tags: |
-            yourusername/your-repo-name:latest
-            yourusername/your-repo-name:${{ github.sha }}
+             {{ secrets.DOCKER_USERNAME }}/your-repo-name:latest
       - name: Post Cache Docker layers
         uses: actions/cache@v2
         with:
