--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,42 +3,44 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - main
-  pull_request:
-    branches:
-      - main
+      - main  # adjust to your branch
+
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+      - name: Debug Docker version
+        run: docker --version
 
-      - name: Log in to Docker Hub
+      - name: Debug Buildx version
+        run: docker buildx version
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Verify login
+        run: docker info
+
       - name: Build and push Docker image
+        id: docker_build
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile  # adjust the path if necessary
           push: true
+          tags: |
+            yourusername/your-repo-name:latest
+            yourusername/your-repo-name:${{ github.sha }}
 
-      - name: Post Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
